<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ValentinGAndroidERestaurant</string>
    <string name="bienvenue_chez">Bienvenue chez</string>
    <string name="il_ristorante">Il Ristorante</string>
    <string name="entrees">Entrees</string>
    <string name="plat">plats</string>
    <string name="dessert">desserts</string>
    <string name="categorie" />
    <string name="price">Price</string>
    <string name="name">Name :</string>
    <string name="le_sang">le sang</string>
    <string name="item_price">itemPrice</string>
    <string name="todo">TODO</string>
    <string name="plats">Plats</string>
    <string name="desserts">Desserts</string>

    <string-array name="Entrees">
        <item>Antipasti</item>
        <item>Salade</item>
        <item>Saucisson</item>
    </string-array>

    <string-array name="Plats">
        <item>Spaghetti Bolognese</item>
        <item>Pasta a la Carbonara</item>
        <item>Pizza quatro fromagi</item>
        <item>Lasagna</item>
    </string-array>

    <string-array name="Desserts">
        <item>Tiramisu</item>
        <item>Cafe gourmand</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="items">items</string>
    <string name="quantity">quantity</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="total">total</string>
    <string name="device_name">Device Name :</string>
    <string name="bluetooth_activity_button">Bluetooth</string>
    <string name="scan">Scan</string>

    <string name="ble_scan_play">Lancer le scan BLE</string>
    <string name="ble_scan_pause">Mettre en pause le scan</string>
    <string name="ble_scan_device_error">BLE non disponible</string>
    <string name="ble_device_disconnected">Statut : Déconnecté</string>
    <string name="ble_device_connected">Statut: Connecté</string>
    <string name="ble_device_charac_write">Ecriture</string>
    <string name="ble_device_charac_read">Lecture</string>
    <string name="disconnected">Disconnected</string>
    <string name="unknown_name">Unkown name</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting...</string>
    <string name="roll">Roll</string>
    <string name="uuid">UUID :</string>
    <string name="croix">Delete</string>
    <string name="fake_com">commentary</string>
    <string name="fake_price">price</string>
    <string name="equals">equals</string>
    <string name="fake_quantity">quantity</string>
    <string name="x">multiply</string>
    <string name="fake_title">name</string>
    <string name="euro">%1$s €</string>
</resources>